Sprint 1. Added empty Caller and Reference Activities. Some UI work in MainActivity.

--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -29,6 +29,7 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:contentDescription="@string/reference_str"
+            android:onClick="onReferenceClick"
             app:srcCompat="@drawable/reference" />
     </LinearLayout>
 
@@ -54,6 +55,7 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:contentDescription="@string/reference_str"
+            android:onClick="onCallerClick"
             app:srcCompat="@drawable/caller" />
     </LinearLayout>
 
