--- a/app/src/main/res/layout/content_reference.xml
+++ b/app/src/main/res/layout/content_reference.xml
@@ -8,4 +8,25 @@
     tools:context=".activities.ReferenceActivity"
     tools:showIn="@layout/activity_reference">
 
+    <Button
+            android:text="Insert"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:id="@+id/reference_insert_item" app:layout_constraintStart_toStartOf="parent"
+            android:layout_marginStart="56dp"
+            app:layout_constraintBottom_toBottomOf="parent" android:layout_marginBottom="64dp"
+            android:onClick="onInsertClick"/>
+    <TextView
+            android:text="TextView"
+            android:layout_width="104dp"
+            android:layout_height="27dp"
+            android:id="@+id/reference_insert_label"
+            app:layout_constraintStart_toStartOf="parent"
+            android:layout_marginStart="56dp" app:layout_constraintTop_toTopOf="parent"
+            android:layout_marginTop="300dp"/>
+    <EditText
+            android:layout_width="102dp"
+            android:layout_height="wrap_content"
+            app:layout_constraintStart_toStartOf="parent" android:layout_marginStart="56dp"
+            app:layout_constraintTop_toTopOf="parent" android:layout_marginTop="344dp"/>
 </android.support.constraint.ConstraintLayout>
