--- a/app/src/main/res/layout/content_reference.xml
+++ b/app/src/main/res/layout/content_reference.xml
@@ -9,24 +9,22 @@
     tools:showIn="@layout/activity_reference">
 
     <Button
-            android:text="Insert"
+            android:text="Select"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:id="@+id/reference_insert_item" app:layout_constraintStart_toStartOf="parent"
-            android:layout_marginStart="56dp"
-            app:layout_constraintBottom_toBottomOf="parent" android:layout_marginBottom="64dp"
-            android:onClick="onInsertClick"/>
+            android:id="@+id/reference_insert_item"
+            app:layout_constraintStart_toStartOf="parent"
+            android:layout_marginStart="148dp"
+            app:layout_constraintBottom_toBottomOf="parent"
+            android:layout_marginBottom="68dp"
+            android:onClick="onShowClick"/>
     <TextView
             android:text="TextView"
-            android:layout_width="104dp"
-            android:layout_height="27dp"
-            android:id="@+id/reference_insert_label"
+            android:layout_width="328dp"
+            android:layout_height="216dp"
+            android:id="@+id/refence_select_label"
             app:layout_constraintStart_toStartOf="parent"
-            android:layout_marginStart="56dp" app:layout_constraintTop_toTopOf="parent"
-            android:layout_marginTop="300dp"/>
-    <EditText
-            android:layout_width="102dp"
-            android:layout_height="wrap_content"
-            app:layout_constraintStart_toStartOf="parent" android:layout_marginStart="56dp"
-            app:layout_constraintTop_toTopOf="parent" android:layout_marginTop="344dp"/>
+            android:layout_marginStart="28dp" app:layout_constraintTop_toTopOf="parent"
+            android:layout_marginTop="16dp"/>
+
 </android.support.constraint.ConstraintLayout>
