--- a/app/src/main/res/layout/content_add_reference_item.xml
+++ b/app/src/main/res/layout/content_add_reference_item.xml
@@ -40,7 +40,7 @@
                     android:id="@+id/item_location_spinner"
                     android:layout_width="0dp"
                     android:layout_height="wrap_content"
-                    android:layout_weight="1"
+                    android:layout_weight="3"
                     />
         </LinearLayout>
 
@@ -59,7 +59,7 @@
                     android:id="@+id/item_organ_spinner"
                     android:layout_width="0dp"
                     android:layout_height="wrap_content"
-                    android:layout_weight="1"
+                    android:layout_weight="3"
                     />
         </LinearLayout>
         <LinearLayout
@@ -77,7 +77,7 @@
                     android:id="@+id/item_season_spinner"
                     android:layout_width="0dp"
                     android:layout_height="wrap_content"
-                    android:layout_weight="1"
+                    android:layout_weight="3"
                     />
         </LinearLayout>
         <LinearLayout
@@ -95,7 +95,7 @@
                     android:id="@+id/item_symptom_spinner"
                     android:layout_width="0dp"
                     android:layout_height="wrap_content"
-                    android:layout_weight="1"
+                    android:layout_weight="3"
                     />
         </LinearLayout>
         <LinearLayout
@@ -109,12 +109,17 @@
                     android:layout_height="wrap_content"
                     android:layout_weight="1"
                     />
-            <EditText
-                    android:id="@+id/item_step_edittext"
+            <RelativeLayout
+                    android:id="@+id/item_step_relative_layout"
                     android:layout_width="0dp"
                     android:layout_height="wrap_content"
-                    android:layout_weight="1"
+                    android:layout_weight="3">
+            <EditText
+                    android:id="@+id/item_step_edittext"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
                     android:hint="@string/enter_step_str"/>
+            </RelativeLayout>
         </LinearLayout>
     <Button
             android:layout_width="wrap_content"
