--- a/app/src/main/res/layout/content_add_reference_item.xml
+++ b/app/src/main/res/layout/content_add_reference_item.xml
@@ -22,7 +22,8 @@
                     android:id="@+id/item_name_textinputedittext"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:hint="@string/add_item_name_str"/>
+                    android:hint="@string/add_item_name_str"
+                    android:textSize="@dimen/edit_text_hint"/>
         </android.support.design.widget.TextInputLayout>
 
         <LinearLayout
@@ -35,6 +36,7 @@
                     android:layout_width="0dp"
                     android:layout_height="wrap_content"
                     android:layout_weight="1"
+                    android:textSize="@dimen/basic_text"
                     />
             <Spinner
                     android:id="@+id/item_location_spinner"
@@ -54,6 +56,8 @@
                     android:layout_width="0dp"
                     android:layout_height="wrap_content"
                     android:layout_weight="1"
+                    android:textSize="@dimen/basic_text"
+
                     />
             <Spinner
                     android:id="@+id/item_organ_spinner"
@@ -72,6 +76,8 @@
                     android:layout_width="0dp"
                     android:layout_height="wrap_content"
                     android:layout_weight="1"
+                    android:textSize="@dimen/basic_text"
+
                     />
             <Spinner
                     android:id="@+id/item_season_spinner"
@@ -90,6 +96,8 @@
                     android:layout_width="0dp"
                     android:layout_height="wrap_content"
                     android:layout_weight="1"
+                    android:textSize="@dimen/basic_text"
+
                     />
             <Spinner
                     android:id="@+id/item_symptom_spinner"
@@ -107,20 +115,42 @@
                     android:text="@string/step_str"
                     android:layout_width="0dp"
                     android:layout_height="wrap_content"
-                    android:layout_weight="1"
+                    android:layout_weight="2"
+                    android:textSize="@dimen/basic_text"
+
                     />
             <RelativeLayout
                     android:id="@+id/item_step_relative_layout"
                     android:layout_width="0dp"
                     android:layout_height="wrap_content"
-                    android:layout_weight="3">
+                    android:layout_weight="5">
             <EditText
                     android:id="@+id/item_step_edittext"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:hint="@string/enter_step_str"/>
+                    android:hint="@string/enter_step_str"
+                    android:textSize="@dimen/edit_text_hint"/>
+
             </RelativeLayout>
+
         </LinearLayout>
+<RelativeLayout
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content">
+        <Button
+            android:id="@+id/remove_item_button"
+            android:layout_alignParentLeft="true"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="-"/>
+        <Button
+            android:id="@+id/add_item_button"
+            android:layout_alignParentRight="true"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="+"/>
+
+</RelativeLayout>
     <Button
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
