--- a/app/src/main/res/layout/content_add_reference_item.xml
+++ b/app/src/main/res/layout/content_add_reference_item.xml
@@ -1,18 +1,14 @@
 <?xml version="1.0" encoding="utf-8"?>
-<ScrollView
-        xmlns:android="http://schemas.android.com/apk/res/android"
-        xmlns:tools="http://schemas.android.com/tools"
-        xmlns:app="http://schemas.android.com/apk/res-auto"
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        app:layout_behavior="@string/appbar_scrolling_view_behavior"
-        tools:showIn="@layout/activity_add_reference_item"
-        tools:context="md.luciddream.findaid.activities.AddReferenceItemActivity">
-
     <LinearLayout
-            android:orientation="vertical"
+            xmlns:android="http://schemas.android.com/apk/res/android"
+            xmlns:tools="http://schemas.android.com/tools"
+            xmlns:app="http://schemas.android.com/apk/res-auto"
             android:layout_width="match_parent"
-            android:layout_height="wrap_content"
+            android:layout_height="match_parent"
+            app:layout_behavior="@string/appbar_scrolling_view_behavior"
+            tools:showIn="@layout/activity_add_reference_item"
+            tools:context="md.luciddream.findaid.activities.AddReferenceItemActivity"
+            android:orientation="vertical"
             android:layout_margin="16dp">
         <android.support.design.widget.TextInputLayout
                 android:layout_width="match_parent"
@@ -115,7 +111,7 @@
                     android:text="@string/step_str"
                     android:layout_width="0dp"
                     android:layout_height="wrap_content"
-                    android:layout_weight="2"
+                    android:layout_weight="1"
                     android:textSize="@dimen/basic_text"
 
                     />
@@ -123,42 +119,49 @@
                     android:id="@+id/item_step_relative_layout"
                     android:layout_width="0dp"
                     android:layout_height="wrap_content"
-                    android:layout_weight="5">
-            <EditText
-                    android:id="@+id/item_step_edittext"
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:hint="@string/enter_step_str"
-                    android:textSize="@dimen/edit_text_hint"/>
+                    android:layout_weight="3">
+            <!--<EditText-->
+                    <!--android:id="@+id/item_step_edittext"-->
+                    <!--android:layout_width="match_parent"-->
+                    <!--android:layout_height="wrap_content"-->
+                    <!--android:hint="@string/enter_step_str"-->
+                    <!--android:textSize="@dimen/edit_text_hint"/>-->
+                <ListView
+                        android:id="@+id/listview"
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"></ListView>
 
             </RelativeLayout>
 
         </LinearLayout>
-<RelativeLayout
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content">
-        <Button
-            android:id="@+id/remove_item_button"
-            android:layout_alignParentLeft="true"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text="-"/>
-        <Button
-            android:id="@+id/add_item_button"
-            android:layout_alignParentRight="true"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text="+"/>
 
-</RelativeLayout>
+    <RelativeLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content">
+        <Button
+                android:id="@+id/remove_item_button"
+                android:layout_alignParentLeft="true"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="-"
+                android:onClick="onRemoveItemClick"/>
+        <Button
+                android:id="@+id/add_item_button"
+                android:layout_alignParentRight="true"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="+"
+                android:onClick="onAddItemClick"/>
+
+    </RelativeLayout>
     <Button
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="@string/save_str"
             android:layout_gravity="center"
             android:onClick="onSaveClick"/>
-    </LinearLayout>
+        </LinearLayout>
 
 
 
-</ScrollView>
+
