--- a/app/src/main/res/layout/content_add_reference_item.xml
+++ b/app/src/main/res/layout/content_add_reference_item.xml
@@ -104,12 +104,11 @@
                     android:textSize="@dimen/basic_text"
 
                     />
-            <Spinner
-                    android:id="@+id/item_symptom_spinner"
+            <ListView
+                    android:id="@+id/item_symptom_listview"
                     android:layout_width="0dp"
                     android:layout_height="wrap_content"
-                    android:layout_weight="3"
-                    />
+                    android:layout_weight="3"/>
         </LinearLayout>
         <LinearLayout
                 android:layout_width="match_parent"
@@ -129,9 +128,7 @@
                         android:id="@+id/item_step_listview"
                         android:layout_width="0dp"
                         android:layout_height="wrap_content"
-                        android:layout_weight="3"></ListView>
-
-
+                        android:layout_weight="3"/>
         </LinearLayout>
 
     </LinearLayout>
