--- a/app/src/main/res/layout/content_add_reference_item.xml
+++ b/app/src/main/res/layout/content_add_reference_item.xml
@@ -24,11 +24,11 @@
                 android:layout_height="wrap_content">
 
             <android.support.design.widget.TextInputEditText
-                    android:id="@+id/item_name_textinputedittext"
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:hint="@string/add_item_name_str"
-                    android:textSize="@dimen/edit_text_hint"/>
+                android:id="@+id/item_name_textinputedittext"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:hint="@string/add_item_name_str"
+                android:textSize="@dimen/edit_text_hint"/>
         </android.support.design.widget.TextInputLayout>
 
         <LinearLayout
@@ -129,6 +129,10 @@
         </LinearLayout>
 
     </LinearLayout>
+    <TextView
+            android:id="@+id/testTextView"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"/>
     <Button
             android:layout_weight="1"
             android:layout_width="wrap_content"
