--- a/app/src/main/res/layout/content_reference.xml
+++ b/app/src/main/res/layout/content_reference.xml
@@ -1,30 +1,15 @@
 <?xml version="1.0" encoding="utf-8"?>
-<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<ListView xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     app:layout_behavior="@string/appbar_scrolling_view_behavior"
     tools:context=".activities.ReferenceActivity"
-    tools:showIn="@layout/activity_reference">
+    tools:showIn="@layout/activity_reference"
+    android:layout_margin="16dp"
+    android:id="@+id/content_reference_list_view">
 
-    <Button
-            android:text="Select"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:id="@+id/reference_insert_item"
-            app:layout_constraintStart_toStartOf="parent"
-            android:layout_marginStart="148dp"
-            app:layout_constraintBottom_toBottomOf="parent"
-            android:layout_marginBottom="68dp"
-            android:onClick="onShowClick"/>
-    <TextView
-            android:text="TextView"
-            android:layout_width="328dp"
-            android:layout_height="216dp"
-            android:id="@+id/refence_select_label"
-            app:layout_constraintStart_toStartOf="parent"
-            android:layout_marginStart="28dp" app:layout_constraintTop_toTopOf="parent"
-            android:layout_marginTop="16dp"/>
 
-</android.support.constraint.ConstraintLayout>
+
+</ListView>
