--- a/app/src/main/res/layout/reference_activity_list_item.xml
+++ b/app/src/main/res/layout/reference_activity_list_item.xml
@@ -5,20 +5,24 @@
         android:orientation="vertical"
         android:layout_margin="16dp">
     <TextView
+            android:layout_weight="1"
+            android:id="@+id/reference_activity_list_item_text_view_1"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:text="Название"
-            android:textSize="20sp"
-            android:gravity="center_horizontal"/>
-    <TextView
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:text="@string/symptom_str"
             android:textSize="20sp"/>
-    <ScrollView
-            android:id="@+id/reference_activity_list_view"
+    <TextView
+            android:layout_weight="1"
+            android:id="@+id/reference_activity_list_item_text_view_2"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
+            android:textSize="16sp"
+            android:text="@string/symptom_str"/>
+    <TextView
+            android:layout_weight="2"
+            android:id="@+id/reference_activity_list_item_text_view_3"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:textSize="16sp"
             />
 
 </LinearLayout>
