--- a/app/src/main/res/layout/reference_activity_list_item.xml
+++ b/app/src/main/res/layout/reference_activity_list_item.xml
@@ -15,8 +15,7 @@
             android:id="@+id/reference_activity_list_item_text_view_2"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:textSize="16sp"
-            android:text="@string/symptom_str"/>
+            android:textSize="16sp"/>
     <TextView
             android:layout_weight="2"
             android:id="@+id/reference_activity_list_item_text_view_3"
