Implemented minimum viable caller activity.

--- a/app/src/main/res/layout/content_caller.xml
+++ b/app/src/main/res/layout/content_caller.xml
@@ -1,11 +1,50 @@
 <?xml version="1.0" encoding="utf-8"?>
-<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
-    xmlns:tools="http://schemas.android.com/tools"
-    android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    app:layout_behavior="@string/appbar_scrolling_view_behavior"
-    tools:context=".activities.CallerActivity"
-    tools:showIn="@layout/activity_caller">
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+              xmlns:app="http://schemas.android.com/apk/res-auto"
+              xmlns:tools="http://schemas.android.com/tools"
+              android:layout_width="match_parent"
+              android:layout_height="match_parent"
+              app:layout_behavior="@string/appbar_scrolling_view_behavior"
+              tools:context=".activities.CallerActivity"
+              tools:showIn="@layout/activity_caller"
+              android:layout_margin="16dp"
+              android:orientation="vertical">
 
-</android.support.constraint.ConstraintLayout>
+    <ScrollView
+            android:layout_width="match_parent"
+            android:layout_height="0dp"
+            android:layout_weight="8"
+            android:layout_marginEnd="16dp"
+            android:id="@+id/caller_scrollview"
+            android:layout_marginTop="8dp"
+            android:layout_marginStart="8dp"
+            >
+        <LinearLayout
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:orientation="vertical">
+            <TextView
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:text="@string/important_str"
+                    android:textAllCaps="true"
+                    android:textColor="@color/colorAccent"
+                    android:textSize="16sp"/>
+        <TextView
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:text="@string/content_caller_text"/>
+        </LinearLayout>
+    </ScrollView>
+    <ImageButton
+            android:contentDescription="@string/call_ambulance_str"
+            android:layout_width="match_parent"
+            android:layout_height="0dp"
+            android:layout_weight="2"
+            app:srcCompat="@android:drawable/stat_sys_phone_call"
+            android:id="@+id/caller_imageButton"
+            android:onClick="onCallAmbulanceClick"
+            android:layout_gravity="center"
+            android:background="@color/colorPrimary"
+            />
+</LinearLayout>
