--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -10,12 +10,13 @@
     <LinearLayout
             android:id="@+id/ReferenceLinearLayout"
             android:layout_width="100dp"
-            android:layout_height="80dp"
+            android:layout_height="83dp"
             android:layout_marginBottom="32dp"
             android:layout_marginStart="32dp"
             android:orientation="vertical"
             app:layout_constraintBottom_toBottomOf="parent"
-            app:layout_constraintStart_toStartOf="parent">
+            app:layout_constraintStart_toStartOf="parent"
+            >
 
         <TextView
                 android:id="@+id/reference_textView"
@@ -34,29 +35,42 @@
     </LinearLayout>
 
     <LinearLayout
-        android:id="@+id/CallerLinearLayout"
-        android:layout_width="100dp"
-        android:layout_height="80dp"
-        android:layout_marginBottom="32dp"
-        android:layout_marginEnd="32dp"
-        android:orientation="vertical"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent">
+            android:id="@+id/CallerLinearLayout"
+            android:layout_width="100dp"
+            android:layout_height="80dp"
+            android:layout_marginBottom="32dp"
+            android:layout_marginEnd="32dp"
+            android:orientation="vertical"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintEnd_toEndOf="parent"
+            >
 
         <TextView
-            android:id="@+id/caller_textView"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:gravity="center_horizontal"
-            android:text="@string/caller" />
+                android:id="@+id/caller_textView"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:gravity="center_horizontal"
+                android:text="@string/caller"/>
 
         <ImageView
-            android:id="@+id/caller_imageView"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:contentDescription="@string/reference_str"
-            android:onClick="onCallerClick"
-            app:srcCompat="@drawable/caller" />
+                android:id="@+id/caller_imageView"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:contentDescription="@string/reference_str"
+                android:onClick="onCallerClick"
+                app:srcCompat="@drawable/caller"/>
     </LinearLayout>
+
+    <ListView
+            android:layout_width="371dp"
+            android:layout_height="330dp"
+            android:layout_marginTop="8dp"
+            app:layout_constraintTop_toTopOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            android:layout_marginStart="16dp"
+            android:id="@+id/main_activity_list_view"
+            android:layout_marginBottom="8dp"
+            app:layout_constraintBottom_toTopOf="@+id/ReferenceLinearLayout"
+            app:layout_constraintEnd_toEndOf="parent"/>
 
 </android.support.constraint.ConstraintLayout>
