--- a/app/src/main/res/layout/content_caller.xml
+++ b/app/src/main/res/layout/content_caller.xml
@@ -40,11 +40,17 @@
             android:contentDescription="@string/call_ambulance_str"
             android:layout_width="match_parent"
             android:layout_height="0dp"
-            android:layout_weight="2"
+            android:layout_weight="1"
             app:srcCompat="@android:drawable/stat_sys_phone_call"
             android:id="@+id/caller_imageButton"
             android:onClick="onCallAmbulanceClick"
-            android:layout_gravity="center"
-            android:background="@color/colorPrimary"
+            android:layout_marginBottom="5dp"
+            android:layout_marginStart="2dp"
+            android:layout_marginEnd="5dp"
+            android:layout_marginTop="0dp"
+            android:adjustViewBounds="true"
+            android:padding="20dp"
+            android:scaleType="fitCenter"
+            android:background="@drawable/custom_button"
             />
 </LinearLayout>
