--- a/app/src/main/res/layout/content_reference.xml
+++ b/app/src/main/res/layout/content_reference.xml
@@ -8,5 +8,6 @@
     tools:context=".activities.ReferenceActivity"
     tools:showIn="@layout/activity_reference"
     android:layout_marginLeft="16dp"
+    android:layout_marginTop="8dp"
     android:id="@+id/content_reference_list_view">
 </ListView>
