--- a/app/src/main/res/layout/reference_activity_list_item.xml
+++ b/app/src/main/res/layout/reference_activity_list_item.xml
@@ -1,27 +1,49 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:orientation="vertical"
-        android:layout_margin="16dp">
+              android:layout_width="match_parent"
+              android:layout_height="wrap_content"
+              xmlns:app="http://schemas.android.com/apk/res-auto"
+              android:orientation="horizontal"
+              android:layout_margin="16dp">
+    <LinearLayout
+            android:layout_width="0dp"
+            android:layout_height="wrap_content"
+            android:orientation="vertical"
+            android:layout_weight="8">
     <TextView
             android:layout_weight="1"
             android:id="@+id/reference_activity_list_item_text_view_1"
             android:layout_width="match_parent"
-            android:layout_height="wrap_content"
+            android:layout_height="0dp"
             android:textSize="20sp"/>
     <TextView
             android:layout_weight="1"
             android:id="@+id/reference_activity_list_item_text_view_2"
             android:layout_width="match_parent"
-            android:layout_height="wrap_content"
+            android:layout_height="0dp"
             android:textSize="16sp"/>
     <TextView
             android:layout_weight="2"
             android:id="@+id/reference_activity_list_item_text_view_3"
             android:layout_width="match_parent"
-            android:layout_height="wrap_content"
+            android:layout_height="0dp"
             android:textSize="16sp"
             />
+    </LinearLayout>
+    <ImageButton
+            android:id="@+id/reference_activity_image_button"
+            android:layout_weight="2"
+            android:layout_width="0dp"
+            android:layout_height="match_parent"
+            app:srcCompat="@drawable/ic_forward_white_24dp"
+            android:layout_marginBottom="5dp"
+            android:layout_marginStart="2dp"
+            android:layout_marginEnd="5dp"
+            android:layout_marginTop="5dp"
+            android:adjustViewBounds="true"
+            android:padding="10dp"
+            android:scaleType="fitCenter"
+            android:background="@drawable/custom_button"
+            android:onClick="onViewDetailsClick"/>
 
 </LinearLayout>
