--- a/app/src/main/res/layout/content_add_reference_item.xml
+++ b/app/src/main/res/layout/content_add_reference_item.xml
@@ -28,7 +28,8 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:hint="@string/add_item_name_str"
-                android:textSize="@dimen/edit_text_hint"/>
+                android:textSize="@dimen/edit_text_hint"
+                android:maxLength="50"/>
         </android.support.design.widget.TextInputLayout>
 
         <LinearLayout
@@ -107,7 +108,7 @@
                     android:id="@+id/item_symptom_listview"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:visibility="gone"/>
+                    android:visibility="visible"/>
         </LinearLayout>
         <LinearLayout
                 android:layout_width="match_parent"
@@ -124,7 +125,7 @@
                         android:id="@+id/item_step_listview"
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
-                        android:visibility="gone"
+                        android:visibility="visible"
                         />
         </LinearLayout>
 
@@ -134,6 +135,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"/>
     <Button
+            android:id="@+id/save_reference_item"
             android:layout_weight="1"
             android:layout_width="wrap_content"
             android:layout_height="0dp"
