--- a/app/src/main/res/drawable/custom_button.xml
+++ b/app/src/main/res/drawable/custom_button.xml
@@ -2,20 +2,21 @@
 <selector xmlns:android="http://schemas.android.com/apk/res/android">
     <item android:state_pressed="false">
         <shape android:shape="rectangle">
-            <corners android:radius="10dp" />
-            <solid android:color="#66bb6a" />
+            <corners android:radius="2dp" />
+            <solid android:color="#E166bb6a"/>
             <stroke
                     android:width="2dip"
-                    android:color="#2e7d32"/>
+                    android:color="#E12e7d32"/>
+
         </shape>
     </item>
     <item android:state_pressed="true">
         <shape android:shape="rectangle">
-            <corners android:radius="10dp" />
-            <solid android:color="#2e7d32" />
+            <corners android:radius="2dp" />
+            <solid android:color="#E12e7d32" />
             <stroke
                     android:width="2dip"
-                    android:color="#66bb6a" />
+                    android:color="#E166bb6a" />
         </shape>
     </item>
 </selector>
