--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -82,14 +82,15 @@
 
     <ListView
             android:layout_width="371dp"
-            android:layout_height="330dp"
+            android:layout_height="wrap_content"
             android:layout_marginTop="8dp"
             app:layout_constraintTop_toTopOf="parent"
             app:layout_constraintStart_toStartOf="parent"
             android:layout_marginStart="16dp"
             android:id="@+id/main_activity_list_view"
-            android:layout_marginBottom="8dp"
+            app:layout_constraintEnd_toEndOf="parent"
+            android:layout_marginBottom="32dp"
             app:layout_constraintBottom_toTopOf="@+id/ReferenceLinearLayout"
-            app:layout_constraintEnd_toEndOf="parent"/>
+            android:layout_marginEnd="16dp"/>
 
 </android.support.constraint.ConstraintLayout>
