--- a/app/src/main/res/layout/reference_activity_list_item.xml
+++ b/app/src/main/res/layout/reference_activity_list_item.xml
@@ -4,7 +4,8 @@
               android:layout_height="wrap_content"
               xmlns:app="http://schemas.android.com/apk/res-auto"
               android:orientation="horizontal"
-              android:layout_margin="16dp">
+              android:layout_margin="16dp"
+              android:background="@drawable/custom_button">
     <LinearLayout
             android:layout_width="0dp"
             android:layout_height="wrap_content"
@@ -15,35 +16,46 @@
             android:id="@+id/reference_activity_list_item_text_view_1"
             android:layout_width="match_parent"
             android:layout_height="0dp"
-            android:textSize="20sp"/>
+            android:textSize="20sp"
+            android:textColor="@android:color/white"
+            android:paddingLeft="2dp"
+            android:paddingTop="2dp"
+            android:paddingRight="2dp"/>
     <TextView
             android:layout_weight="1"
             android:id="@+id/reference_activity_list_item_text_view_2"
             android:layout_width="match_parent"
             android:layout_height="0dp"
-            android:textSize="16sp"/>
+            android:textSize="16sp"
+            android:textColor="@android:color/white"
+            android:paddingLeft="4dp"
+            android:paddingTop="2dp"
+            android:paddingRight="2dp"/>
     <TextView
             android:layout_weight="2"
             android:id="@+id/reference_activity_list_item_text_view_3"
             android:layout_width="match_parent"
             android:layout_height="0dp"
             android:textSize="16sp"
-            />
+            android:textColor="@android:color/white"
+            android:paddingLeft="4dp"
+            android:paddingTop="2dp"
+            android:paddingRight="2dp"/>
     </LinearLayout>
-    <ImageButton
-            android:id="@+id/reference_activity_image_button"
-            android:layout_weight="2"
-            android:layout_width="0dp"
-            android:layout_height="match_parent"
-            app:srcCompat="@drawable/ic_forward_white_24dp"
-            android:layout_marginBottom="5dp"
-            android:layout_marginStart="2dp"
-            android:layout_marginEnd="5dp"
-            android:layout_marginTop="5dp"
-            android:adjustViewBounds="true"
-            android:padding="10dp"
-            android:scaleType="fitCenter"
-            android:background="@drawable/custom_button"
-            android:onClick="onViewDetailsClick"/>
+    <!--<ImageButton-->
+            <!--android:id="@+id/reference_activity_image_button"-->
+            <!--android:layout_weight="2"-->
+            <!--android:layout_width="0dp"-->
+            <!--android:layout_height="match_parent"-->
+            <!--app:srcCompat="@drawable/ic_forward_white_24dp"-->
+            <!--android:layout_marginBottom="5dp"-->
+            <!--android:layout_marginStart="2dp"-->
+            <!--android:layout_marginEnd="5dp"-->
+            <!--android:layout_marginTop="5dp"-->
+            <!--android:adjustViewBounds="true"-->
+            <!--android:padding="10dp"-->
+            <!--android:scaleType="fitCenter"-->
+            <!--android:background="@drawable/custom_button"-->
+            <!--android:onClick="onViewDetailsClick"/>-->
 
 </LinearLayout>
