--- a/app/src/main/res/drawable/custom_button.xml
+++ b/app/src/main/res/drawable/custom_button.xml
@@ -4,16 +4,17 @@
         <shape android:shape="rectangle">
             <corners android:radius="2dp" />
             <solid android:color="#E166bb6a"/>
+            <!--<solid android:color="#FFFFFFFF"/>-->
             <stroke
                     android:width="2dip"
                     android:color="#E12e7d32"/>
-
         </shape>
     </item>
     <item android:state_pressed="true">
         <shape android:shape="rectangle">
             <corners android:radius="2dp" />
             <solid android:color="#E12e7d32" />
+            <!--<solid android:color="#E166bb6a"/>-->
             <stroke
                     android:width="2dip"
                     android:color="#E166bb6a" />
