--- a/app/src/main/res/values/texts.xml
+++ b/app/src/main/res/values/texts.xml
@@ -9,7 +9,7 @@
         <b>Sex.</b>\n
         <b>Age.</b> Approximately e.g.: teenager, about 12 years old etc.\n
         <b>What happened.</b> Briefly: Car-crash, unconscious people etc.\n
-        <b>Who called ambulance</b> — passer-by, relative, neighbour и т. п.\n
+        <b>Who called ambulance</b> — passer-by, relative, neighbor etc.\n
         Leave you phone number. Ambulance may have questions to you as the closer to the place. It is extremely important if one has bad knowledge of current location\n
         <i>Hang up only after ambulance dispatcher hung up.</i></string>
 </resources>
