--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -39,7 +39,8 @@
                 android:layout_marginTop="0dp"
                 android:adjustViewBounds="true"
                 android:padding="10dp"
-                android:background="@drawable/roundcorner"
+                android:background="@drawable/custom_button"
+                android:clickable="true"
                 />
     </LinearLayout>
 
@@ -76,7 +77,9 @@
             android:adjustViewBounds="true"
             android:padding="10dp"
             android:scaleType="fitCenter"
-            android:background="@drawable/roundcorner"
+            android:background="@drawable/custom_button"
+            android:clickable="true"
+
                 />
     </LinearLayout>
 
